--- a/HelpClosing-backend/src/main/resources/application.yml
+++ b/HelpClosing-backend/src/main/resources/application.yml
@@ -1,2 +1,25 @@
-fcm:
-  certification: serviceAccountKey.json
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/springbasic?serverTimezone=UTC&characterEncoding=UTF-8
+    username: root
+    password: qkqnxod132
+
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    open-in-view: false
+    show-sql: true
+    hibernate:
+      ddl-auto: create
+      format_sql: true
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug
+        type:
+            descriptor:
+                sql:
+                  BasicBinder: trace
+
