--- a/HelpClosing-frontend/.gitignore
+++ b/HelpClosing-frontend/.gitignore
@@ -9,6 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
+assets/.env
 
 # IntelliJ related
 *.iml
@@ -42,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+assets/.env
+
+
+
+# .gitignore
+assets/.env
+web/
