--- a/HelpClosing-frontend/android/app/build.gradle
+++ b/HelpClosing-frontend/android/app/build.gradle
@@ -22,6 +22,8 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+def googleMapApiKey = localProperties.getProperty('google.map.key')
+
 android {
     namespace "com.example.help_closing_frontend"
     compileSdkVersion flutter.compileSdkVersion
@@ -45,8 +47,10 @@ android {
         applicationId "com.example.help_closing_frontend"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 20
+//        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion 30
+        manifestPlaceholders["googleMapApiKey"] = googleMapApiKey
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
