--- a/HelpClosing-frontend/pubspec.yaml
+++ b/HelpClosing-frontend/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_maps_flutter: ^2.5.0
   geolocator: ^10.1.0
   google_maps_routes: ^1.1.2
+  flutter_dotenv: ^5.1.0
+  flutter_config: ^2.0.2
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
