수정 없애고 구동 확인, application 환경에 따라 분리, swagger 수정 완료 + jwt 보완필요!

--- a/HelpClosing-backend/src/main/resources/application.yml
+++ b/HelpClosing-backend/src/main/resources/application.yml
@@ -1,33 +1,3 @@
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springbasic?serverTimezone=UTC&characterEncoding=UTF-8
-    username: root
-    password: qkqnxod132
-
-  jpa:
-    open-in-view: true
-    hibernate:
-      ddl-auto: update
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      use-new-id-generator-mappings: false
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-        spatial:
-          enabled: true
-
-
-logging:
-  level:
-    org:
-      hibernate:
-        SQL: debug
-        type:
-          descriptor:
-            sql:
-              BasicBinder: trace
-
+  profiles:
+    active: ${profile}
