--- a/HelpClosing-frontend/pubspec.yaml
+++ b/HelpClosing-frontend/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_config: ^2.0.2
   permission_handler: ^11.0.1
+  flutter_secure_storage: ^9.0.0
+  firebase_core: ^2.23.0
+  flutter_local_notifications: ^16.1.0
+  firebase_messaging: ^14.7.5
 
 dev_dependencies:
   flutter_test:
