--- a/HelpClosing-frontend/android/app/build.gradle
+++ b/HelpClosing-frontend/android/app/build.gradle
@@ -22,11 +22,13 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
-def googleMapApiKey = localProperties.getProperty('google.map.key')
+//def googleMapApiKey = localProperties.getProperty('google.map.key')
 
 android {
     namespace "com.example.help_closing_frontend"
-    compileSdkVersion flutter.compileSdkVersion
+//    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 33
+    buildToolsVersion "33.0.0"
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -48,11 +50,14 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 20
-//        targetSdkVersion flutter.targetSdkVersion
-        targetSdkVersion 30
-        manifestPlaceholders["googleMapApiKey"] = googleMapApiKey
+        targetSdkVersion flutter.targetSdkVersion
+//        targetSdkVersion 30
+//        manifestPlaceholders["googleMapApiKey"] = googleMapApiKey
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+
+        multiDexEnabled true
     }
 
     buildTypes {
