--- a/HelpClosing-frontend/android/app/build.gradle
+++ b/HelpClosing-frontend/android/app/build.gradle
@@ -31,7 +31,13 @@ android {
     buildToolsVersion "33.0.0"
     ndkVersion flutter.ndkVersion
 
+
+    defaultConfig {
+        multiDexEnabled true
+    }
+
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -73,4 +79,10 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation "androidx.multidex:multidex:2.0.1"
+    implementation 'androidx.window:window:1.0.0'
+    implementation 'androidx.window:window-java:1.0.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+
+}
