--- a/HelpClosing-frontend/pubspec.yaml
+++ b/HelpClosing-frontend/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_core: ^2.23.0
   flutter_local_notifications: ^16.1.0
   firebase_messaging: ^14.7.5
+  firebase_analytics: ^10.7.1
 
 dev_dependencies:
   flutter_test:
