--- a/HelpClosing-frontend/pubspec.yaml
+++ b/HelpClosing-frontend/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_local_notifications: ^16.1.0
   firebase_messaging: ^14.7.5
   firebase_analytics: ^10.7.1
+  flutter_slidable: ^3.0.1
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
