--- a/HelpClosing-backend/src/main/resources/application-local.yml
+++ b/HelpClosing-backend/src/main/resources/application-local.yml
@@ -46,15 +46,28 @@ jwt:
   secret:
     key: x!A%D*G-KaPdSgVkYp3s5v8y/B?E(H+M
 
+
 cloud:
   aws:
-    s3:
-      bucket: helpclosing-bucket
-      region:
-        static: ap-northeast-2
-        auto: false
-      stack:
-        auto: false
-      credentials:
-        access-key:
-        secret-key:
+    #    s3:
+    #      bucket: helpclosing-bucket
+    #    credentials:
+    #      accessKey:
+    #      secretKey:
+    stack:
+      auto: false
+    region:
+      static: ap-northeast-2
+#
+#cloud:
+#  aws:
+#    s3:
+#      bucket: helpclosing-bucket
+#      region:
+#        static: ap-northeast-2
+#        auto: false
+#      stack:
+#        auto: false
+#      credentials:
+#        access-key:
+#        secret-key:
