거리에 따라 순서 확인하는 기능 만듦. 사람 찾을 때는 이거 위주로

--- a/HelpClosing-backend/src/main/resources/application-local.yml
+++ b/HelpClosing-backend/src/main/resources/application-local.yml
@@ -46,6 +46,12 @@ jwt:
   secret:
     key: x!A%D*G-KaPdSgVkYp3s5v8y/B?E(H+M
 
+server:
+  servlet:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
 
 cloud:
   aws:
