--- a/HelpClosing-backend/src/main/resources/application-local.yml
+++ b/HelpClosing-backend/src/main/resources/application-local.yml
@@ -1,4 +1,8 @@
 spring:
+#  application:
+#    name: helpclosing
+#  profiles:
+#    active: local
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/springbasic?serverTimezone=UTC&characterEncoding=UTF-8
