--- a/HelpClosing-backend/build.gradle
+++ b/HelpClosing-backend/build.gradle
@@ -4,6 +4,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
+bootJar {
+	mainClass = 'com.example.ExampleApplication'
+}
+
 group = 'cau.capstone'
 version = '0.0.1-SNAPSHOT'
 
