--- a/HelpClosing-backend/local.properties
+++ b/HelpClosing-backend/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 23 16:28:24 KST 2023
-sdk.dir=C\:\\Users\\JoEonWook\\AppData\\Local\\Android\\Sdk
+#Wed Nov 29 21:19:57 KST 2023
+sdk.dir=C\:\\Users\\juyeo\\AppData\\Local\\Android\\Sdk
