--- a/HelpClosing-backend/src/main/resources/application-local.yml
+++ b/HelpClosing-backend/src/main/resources/application-local.yml
@@ -56,15 +56,29 @@ server:
       enabled: true
       force: true
 
+
 cloud:
   aws:
-    s3:
-      bucket: helpclosing-bucket
-      region:
-        static: ap-northeast-2
-        auto: false
-      stack:
-        auto: false
-      credentials:
-        access-key: AKIAVFL2SVMF4CP3BBW4
-        secret-key: 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
+    #    s3:
+    #      bucket: helpclosing-bucket
+    #    credentials:
+    #      accessKey:
+    #      secretKey:
+    stack:
+      auto: false
+    region:
+      static: ap-northeast-2
+
+
+#cloud:
+#  aws:
+#    s3:
+#      bucket: helpclosing-bucket
+#      region:
+#        static: ap-northeast-2
+#        auto: false
+#      stack:
+#        auto: false
+#      credentials:
+#        access-key: AKIAVFL2SVMF4CP3BBW4
+#        secret-key: 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
