--- a/HelpClosing-frontend/pubspec.yaml
+++ b/HelpClosing-frontend/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.6
-  http: ^0.13.1
   google_maps_flutter: ^2.5.0
   geolocator: ^10.1.0
   google_maps_routes: ^1.1.2
@@ -51,6 +50,11 @@ dependencies:
   flutter_slidable: ^3.0.1
   web_socket_channel: ^2.4.0
   flutter_polyline_points: ^1.0.0
+  dio: ^5.3.4
+  stomp_dart_client: ^1.0.0
+  http: ^0.13.6
+  contacts_service: ^0.6.3
+  assets_audio_player: ^3.1.1
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +84,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/
+    - assets/audios/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
