--- a/HelpClosing-frontend/android/app/src/main/AndroidManifest.xml
+++ b/HelpClosing-frontend/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
 <!--    -->
     <application
-        android:label="help_closing_frontend"
+        android:label="도움닿기"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
